--- a/index.ipynb
+++ b/index.ipynb
@@ -126,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "names = map(lambda restaurant: rest)\n",
+    "names = map(lambda restaurant: restaurant['name'], r)\n",
     "names\n",
     "# ['Fork & Fig',\n",
     "#  'Salt And Board',\n",
