--- a/index.ipynb
+++ b/index.ipynb
@@ -122,11 +122,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<map at 0x7fea943af278>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "names = map(lambda restaurant: restaurant['name'], r)\n",
+    "names = list(map(lambda restaurant: restaurant['name'], restaurants))\n",
     "names\n",
     "# ['Fork & Fig',\n",
     "#  'Salt And Board',\n",
