Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -122,16 +122,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<map at 0x7fea943af278>"
+       "['Fork & Fig',\n",
+       " 'Salt And Board',\n",
+       " 'Frontier Restaurant',\n",
+       " 'Nexus Brewery',\n",
+       " \"Devon's Pop Smoke\",\n",
+       " 'Cocina Azul',\n",
+       " 'Philly Steaks',\n",
+       " 'Stripes Biscuit']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
