Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -197,7 +197,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "total_reviews = map(l)\n",
+    "total_reviews = map(lambda rest: rest['total_reviews'], re)\n",
     "total_reviews # 3420"
    ]
   },
