Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -193,22 +193,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[610, 11, 1373, 680, 54, 647, 25, 20]"
+       "3420"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "total_reviews = list(map(lambda rest: rest['review_count'], restaurants))\n",
+    "total_reviews = sum(list(map(lambda rest: rest['review_count'], restaurants)))\n",
     "total_reviews # 3420"
    ]
   },
