--- a/index.ipynb
+++ b/index.ipynb
@@ -356,19 +356,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    return list(filter(lambda rest: rest['is_closed'], resta))"
+    "    return list(filter(lambda rest: rest['is_closed'], restaurants))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'Cocina Azul', 'price': 2, 'is_closed': True, 'review_count': 647},\n",
+       " {'name': 'Stripes Biscuit',\n",
+       "  'price': 2,\n",
+       "  'is_closed': True,\n",
+       "  'review_count': 20}]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "open_restaurants(restaurants)\n",
     "\n",
