--- a/index.ipynb
+++ b/index.ipynb
@@ -356,10 +356,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'Fork & Fig', 'price': 2, 'is_closed': False, 'review_count': 610}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "restaurants[0]"
+   ]
   },
   {
    "cell_type": "code",
