Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -371,7 +371,7 @@
     }
    ],
    "source": [
-    "filter(lambda rest: rest[''])"
+    "filter(lambda rest: rest['is_closed'] =)"
    ]
   },
   {
