--- a/index.ipynb
+++ b/index.ipynb
@@ -473,7 +473,7 @@
    "outputs": [],
    "source": [
     "def cheapest_restaurants(restaurants):\n",
-    "    return list(filter(lambda rest: rest))"
+    "    return list(filter(lambda rest: len(rest[''])))"
    ]
   },
   {
