Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -473,7 +473,7 @@
    "outputs": [],
    "source": [
     "def cheapest_restaurants(restaurants):\n",
-    "    return list(filter(lambda rest: len(rest['price'])))"
+    "    return list(filter(lambda rest: len(rest['price']) == 1), restaur)"
    ]
   },
   {
