--- a/index.ipynb
+++ b/index.ipynb
@@ -520,7 +520,7 @@
    "outputs": [],
    "source": [
     "def sufficiently_reviewed_restaurants(restaurants):\n",
-    "    re"
+    "    return list(filter(lambda r))"
    ]
   },
   {
